data/derived/comb/progs/unify/prog2013.ml.out
Characters 94-95:
  List.fold_left f base fs;;
                 ^
Error: This expression has type ('a -> 'b) -> ('b -> 'b) -> bool
       but an expression was expected of type
         ('a -> 'b) -> ('b -> 'b) -> 'a -> 'b
       Type bool is not compatible with type 'a -> 'b 
